src/objects/ints__Credit_Report_Score__c.object
<CustomObject>
    <fields>
        <fullName>ints__BorrowerID__c</fullName>
        <label>Borrower ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__CreditFileID__c</fullName>
        <label>Credit File ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__CreditReportIdentifier__c</fullName>
        <label>Credit Report Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__CreditReport__c</fullName>
        <label>Credit Report</label>
        <referenceTo>ints__Credit_Report__c</referenceTo>
        <relationshipLabel>CreditReportScore</relationshipLabel>
        <relationshipName>CreditReportScore</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__CreditRepositorySourceType__c</fullName>
        <label>Credit Repository Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__CreditScoreID__c</fullName>
        <label>Credit Score ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ints__FACTAInquiriesIndicator__c</fullName>
        <label>FACTA Inquiries Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__ModelNameType__c</fullName>
        <label>Model Name Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Credit Report Score</label>
    <nameField>
        <displayFormat>CRS-{0000000000}</displayFormat>
        <label>Credit Report Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Report Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>